# datamasque-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: release.yml
.github/workflows/: ci.yml  release-testpypi.yml  release.yml
claude-skills/: README.md
claude-skills/datamasque-cli/: SKILL.md
claude-skills/datamasque-cli/skills/datamasque-cli/: SKILL.md
claude-skills/ruleset-builder/: SKILL.md
claude-skills/ruleset-builder/.claude-plugin/: plugin.json
claude-skills/ruleset-builder/references/: hash-columns-guide.md  mask-definitions-guide.md  ruleset-libraries-guide.md  ruleset-yaml-reference.md
claude-skills/ruleset-builder/skills/ruleset-builder/: SKILL.md
claude-skills/ruleset-builder/skills/ruleset-builder/references/: fk-cascade.md  hash-columns-guide.md  mask-definitions-guide.md  ruleset-libraries-guide.md  ruleset-yaml-reference.md
claude-skills/ruleset-splitter/: SKILL.md
scripts/: active_profile_env.py  bump_version.py  release.sh
src/datamasque_cli/: client.py  config.py  main.py  output.py
src/datamasque_cli/commands/: auth.py  connections.py  discovery.py  discovery_config_libraries.py  discovery_configs.py  files.py  ifm.py  ruleset_libraries.py  rulesets.py  runs.py  seeds.py  system.py  users.py
tests/: conftest.py  test_client_auth.py  test_client_env.py  test_client_ifm.py  test_client_profile.py  test_config.py  test_output.py  test_version.py
tests/commands/: test_auth.py  test_catalog.py  test_connections.py  test_discovery.py  test_discovery_config_libraries.py  test_discovery_configs.py  test_files.py  test_ifm.py  test_ruleset_libraries.py  test_rulesets.py  test_runs.py  test_seeds.py  test_system.py  test_users.py
tests/integration/: README.md  conftest.py  test_connections.py  test_delete_safety.py  test_discovery.py  test_rulesets.py  test_runs.py  test_system.py
